# EECS583-Final

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmarks/: axpy.cu  gaussian-man.cu  gaussian-org.cu  gaussian.cu  mytest.cu  sample-org.cu
benchmarks/nn/: filelist_10  hurricane_gen.c  nn-man.cu  nn-org.cu
benchmarks/nn/data/: cane10_5.db  cane10_9.db
benchmarks/particle_filter/: particle_filter-man.cu  particle_filter-org.cu
benchmarks/sample/: sample-man.cu
src/: CMakeLists.txt  CUDAPrefetch.cpp
